<resources>
  <string name="app_name">Quick Calendar</string>

  <string name="tile_fragment_recent_title">Recent Calendars</string>
  <string name="tile_fragment_recent_shared_title">Shared Calendars</string>
  <string name="no_calendars">There are no calendars to show.</string>
  <string name="no_calendars_sub">Click the ( + ) to create a new calendar.</string>
  <string name="no_shared_calendars_sub">Shared calendars you visited will appear in this list.</string>
  <string name="calendar_tile_thumbnail">calendar tile thumbnail</string>

  <string name="calendar_untitled_name">Untitled Calendar</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="edit_calendar_name_title">Calendar Name</string>

  <string name="day_of_week_header_0">S</string>
  <string name="day_of_week_header_1">M</string>
  <string name="day_of_week_header_2">T</string>
  <string name="day_of_week_header_3">W</string>
  <string name="day_of_week_header_4">T</string>
  <string name="day_of_week_header_5">F</string>
  <string name="day_of_week_header_6">S</string>
  <string name="month_year_format_string">MMMM yyyy</string>

  <string name="day_mode_date_string_format">%1s %2s</string>

  <string name="day_mode_day_of_week_0">(Sun)</string>
  <string name="day_mode_day_of_week_1">(Mon)</string>
  <string name="day_mode_day_of_week_2">(Tue)</string>
  <string name="day_mode_day_of_week_3">(Wed)</string>
  <string name="day_mode_day_of_week_4">(Thu)</string>
  <string name="day_mode_day_of_week_5">(Fri)</string>
  <string name="day_mode_day_of_week_6">(Sat)</string>

  <string name="preference_file_key">djdenpa_quick_calendar_preference_file_key</string>
  <string name="preference_calendar_week_granularity">calendar_week_granularity</string>
  <string name="preference_calendar_day_granularity">calendar_day_granularity</string>
  <string name="preference_calendar_display_mode">calendar_display_mode</string>

  <string name="menu_save">Save</string>
  <string name="menu_delete_calendar">Delete Calendar</string>
  <string name="menu_change_granularity">Change Event Granularity</string>
  <string name="menu_add_event">Add Event</string>
  <string name="menu_change_view">Change Calendar Mode</string>

  <string name="edit_event_title">Edit Event</string>
  <string name="add_event_title">Add New Event</string>

  <string name="edit_event_event_name_label">Event Name</string>
  <string name="edit_event_event_start_label">Begin Date</string>
  <string name="edit_event_event_end_label">End Date</string>
  <string name="edit_event_event_color_label">Event Color</string>


  <string name="year_hint">YYYY</string>
  <string name="month_hint">MM</string>
  <string name="day_hint">DD</string>

  <string name="hour_hint">HH</string>
  <string name="minute_hint">mm</string>

  <string-array name="week_granularity">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>6</item>
    <item>12</item>
    <item>24</item>
  </string-array>

  <string-array name="calendar_modes">
    <item>0</item>
    <item>1</item>
  </string-array>
  <string name="calendar_modes_row_per_week">Weeks</string>
  <string name="calendar_modes_row_per_day">Days</string>
  <string name="colon">:</string>

  <string name="after_year">/</string>
  <string name="after_month">/</string>
  <string name="after_day"/>
  <string name="format_2_digit">%1$02d</string>
  <string name="set_by_duration">Set by Duration</string>
  <string name="set_button">Set</string>
  <string name="cancel_button">Cancel</string>
  <string name="sign_out">Sign Out</string>
  <string name="disconnect">Disconnect</string>
  <string name="sign_in_please">Sign in to enable ownership enforcement and real time sharing.</string>
  <string name="signed_in_as_fmt">Signed in as: %s</string>

  <string-array name="am_pm">
    <item>AM</item>
    <item>PM</item>
  </string-array>

  <string-array name="duration_units">
    <item>minutes</item>
    <item>hours</item>
    <item>days</item>
    <item>weeks</item>
  </string-array>


  <string name="select_color_cancel">cancel select color</string>
  <string name="select_color_save">save selected color</string>

  <string name="set_duration_cancel">cancel set duration</string>
  <string name="set_duration_save">save duration</string>

  <string name="google_client_id">586345749577-gdp597tkms81vuq8hgvljn5d9n53gtvd.apps.googleusercontent.com</string>
  <string name="prev">prev</string>
  <string name="next">next</string>
  <string name="settings_menu_label">Settings</string>
  <string name="extra_menu_label">Extras</string>
  <string name="menu_generate_test_data">Generate Test Data</string>
  <string name="menu_real_time_share">Real-time Share</string>
  <string name="menu_share_link">Share Link</string>
  <string name="menu_disable_share">Disable</string>
  <string name="menu_delete_event">Delete Event</string>
  <string name="add_widget">Add widget</string>
  <string name="selected_color">selected color</string>
  <string name="current_color">current color</string>
  <string name="color_hint">hex color code</string>
  <string name="calendar_name_hint">calendar name</string>
  <string name="create_event_at_cursor_hint">create event at cursor</string>
  <string name="create_new_calendar_hint">create new calendar</string>
  <string name="upcoming_events">Upcoming Events</string>
  <string name="widget_date_format">MMM d</string>
  <string name="unnamed_event">Unnamed Event</string>
  <string name="widget_time_format">h:mm a</string>

</resources>
