<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".views.activities.EditCalendarActivity">
  <item
      android:id="@+id/action_save_calendar"
      android:orderInCategory="1"
      android:title="@string/menu_save"
      app:showAsAction="ifRoom"/>

  <item
    android:id="@+id/action_add_event"
    android:orderInCategory="2"
    android:title="@string/menu_add_event"
    app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_change_calendar_view"
      android:orderInCategory="3"
      android:title="@string/menu_change_view"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_change_granularity"
      android:orderInCategory="4"
      android:title="@string/menu_change_granularity"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_delete_calendar"
      android:orderInCategory="5"
      android:title="@string/menu_delete_calendar"
      app:showAsAction="ifRoom"/>
</menu>