<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <LinearLayout
      android:id="@+id/ll_start_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
    <EditText
        android:id="@+id/et_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:minEms="4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:hint="@string/year_hint"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/et_month"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:text="@string/after_year"/>
    <EditText
        android:id="@+id/et_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:minEms="4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:hint="@string/month_hint"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/et_day"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:text="@string/after_month"/>
    <EditText
        android:id="@+id/et_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:minEms="4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:hint="@string/day_hint"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/et_hour"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:text="@string/after_day"/>
  </LinearLayout>
  <LinearLayout
      android:id="@+id/ll_start_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/edit_text_size"
      android:orientation="horizontal"
      >
    <EditText
        android:id="@+id/et_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:minEms="4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:hint="@string/hour_hint"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/et_minute"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:text="@string/colon"/>
    <EditText
        android:id="@+id/et_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:minEms="4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:hint="@string/minute_hint"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/s_am_pm"
        android:maxLength="2"
        />
    <Spinner
        android:id="@+id/s_am_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        />
  </LinearLayout>

</LinearLayout>