<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/day_of_week_header_gradient_offset"
    android:background="@color/primaryBgColor"
    app:layout_constraintTop_toTopOf="parent"
    android:elevation="1dp"
    >

  <android.support.constraint.Guideline
      android:id="@+id/g_day_0"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.00"
      />

  <android.support.constraint.Guideline
      android:id="@+id/g_day_1"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.143"
      />
  <android.support.constraint.Guideline
      android:id="@+id/g_day_2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.286"
      />

  <android.support.constraint.Guideline
      android:id="@+id/g_day_4"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.571"
      />

  <android.support.constraint.Guideline
      android:id="@+id/g_day_3"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.429"
      />

  <android.support.constraint.Guideline
      android:id="@+id/g_day_5"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.714"
      />

  <android.support.constraint.Guideline
      android:id="@+id/g_day_6"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.857"
      />

  <android.support.constraint.Guideline
      android:id="@+id/g_day_7"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="1.000"
      />

  <TextView
      android:id="@+id/tv_day_0"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="@dimen/day_of_week_header_offset"
      android:text="@string/day_of_week_header_0"
      android:textSize="@dimen/calendar_date_text_size"
      app:layout_constraintStart_toStartOf="@id/g_day_0"
      app:layout_constraintTop_toTopOf="parent"/>
  <TextView
      android:id="@+id/tv_day_1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="@dimen/day_of_week_header_offset"
      android:text="@string/day_of_week_header_1"
      android:textSize="@dimen/calendar_date_text_size"
      app:layout_constraintStart_toStartOf="@id/g_day_1"
      app:layout_constraintTop_toTopOf="parent"/>
  <TextView
      android:id="@+id/tv_day_2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="@dimen/day_of_week_header_offset"
      android:text="@string/day_of_week_header_2"
      android:textSize="@dimen/calendar_date_text_size"
      app:layout_constraintStart_toStartOf="@id/g_day_2"
      app:layout_constraintTop_toTopOf="parent"/>
  <TextView
      android:id="@+id/tv_day_3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="@dimen/day_of_week_header_offset"
      android:text="@string/day_of_week_header_3"
      android:textSize="@dimen/calendar_date_text_size"
      app:layout_constraintStart_toStartOf="@id/g_day_3"
      app:layout_constraintTop_toTopOf="parent"/>
  <TextView
      android:id="@+id/tv_day_4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="@dimen/day_of_week_header_offset"
      android:text="@string/day_of_week_header_4"
      android:textSize="@dimen/calendar_date_text_size"
      app:layout_constraintStart_toStartOf="@id/g_day_4"
      app:layout_constraintTop_toTopOf="parent"/>
  <TextView
      android:id="@+id/tv_day_5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="@dimen/day_of_week_header_offset"
      android:text="@string/day_of_week_header_5"
      android:textSize="@dimen/calendar_date_text_size"
      app:layout_constraintStart_toStartOf="@id/g_day_5"
      app:layout_constraintTop_toTopOf="parent"/>
  <TextView
      android:id="@+id/tv_day_6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="@dimen/day_of_week_header_offset"
      android:text="@string/day_of_week_header_6"
      android:textSize="@dimen/calendar_date_text_size"
      app:layout_constraintStart_toStartOf="@id/g_day_6"
      app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>