<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_start_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

  <EditText
      android:id="@+id/et_duration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/edit_text_size"
      android:minEms="4"
      android:maxLines="1"
      android:selectAllOnFocus="true"
      android:hint="@string/month_hint"
      android:inputType="number"
      android:imeOptions="actionDone"
      android:nextFocusForward="@id/s_duration"
      />

  <Spinner
      android:id="@+id/s_duration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/edit_text_size"
      />

  <ImageButton
      android:id="@+id/b_cancel"
      android:layout_width="@dimen/circle_button_size"
      android:layout_height="@dimen/circle_button_size"
      android:background="@drawable/outline_button_circle"
      android:tint="@color/deny"
      android:layout_marginStart="@dimen/side_button_margin"
      android:src="@drawable/ic_close_black_24dp"
      android:layout_marginBottom="8dp"
      android:clickable="true"
      android:focusable="true"
      android:contentDescription="@string/select_color_cancel"
      />
  <ImageButton
      android:id="@+id/b_set"
      android:layout_width="@dimen/circle_button_size"
      android:layout_height="@dimen/circle_button_size"
      android:background="@drawable/outline_button_circle"
      android:tint="@color/confirm"
      android:layout_marginStart="@dimen/side_button_margin"
      android:src="@drawable/ic_check_black_24dp"
      android:layout_marginBottom="8dp"
      android:clickable="true"
      android:focusable="true"
      android:contentDescription="@string/select_color_save"
      />

</LinearLayout>