<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="?dialogPreferredPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- main view -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/primaryBgColor"
        >

        <LinearLayout
            android:id="@+id/ll_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_event_event_name_label"
                android:theme="@style/FieldLabel"
                />
            <EditText
                android:id="@+id/et_event_name"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_event_event_start_label"
                android:theme="@style/FieldLabel"
                />

            <com.djdenpa.quickcalendar.views.components.QuickDatePicker
                android:id="@+id/qdp_begin_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.djdenpa.quickcalendar.views.components.QuickDatePicker>


            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_event_event_end_label"
                android:theme="@style/FieldLabel"
                />

            <com.djdenpa.quickcalendar.views.components.QuickDatePicker
                android:id="@+id/qdp_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.djdenpa.quickcalendar.views.components.QuickDatePicker>

            <Button
                android:id="@+id/b_set_by_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SET BY DURATION"/>


        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>