<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    tools:context=".views.activities.MainActivity" >


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >



    <LinearLayout
        android:id="@+id/cl_fragments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/scroll_padding_for_fab"
        android:orientation="vertical"
        >

      <LinearLayout
          android:id="@+id/ll_identity"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp"
          >

        <TextView
            android:id="@+id/tv_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="not logged in"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_sign_out_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

          <!--<Button-->
              <!--android:id="@+id/sign_out_button"-->
              <!--android:layout_width="wrap_content"-->
              <!--android:layout_height="wrap_content"-->
              <!--android:text="@string/sign_out"-->
              <!--/>-->

          <Button
              android:id="@+id/disconnect_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/disconnect"
              />
        </LinearLayout>

      </LinearLayout>

      <fragment
          android:id="@+id/f_recent_calendars"
          android:name="com.djdenpa.quickcalendar.views.fragments.CalendarTileListFragment"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tools:layout="@layout/fragment_calendar_tile_list"/>

      <!-- because the message in the empty state might  -->
      <fragment
          android:id="@+id/f_recent_shared_calendars"
          android:name="com.djdenpa.quickcalendar.views.fragments.CalendarTileListFragment"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

  </ScrollView>

  <android.support.design.widget.AppBarLayout
      android:id="@+id/app_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="bottom">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/app_name"
          android:textColor="@color/white"
          android:textSize="@dimen/toolbar_text_size"/>

    </android.support.v7.widget.Toolbar>

  </android.support.design.widget.AppBarLayout>

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/fab_create_new"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:layout_marginEnd="24dp"
      app:layout_anchor="@id/cl_fragments"
      app:layout_anchorGravity="bottom|right|end"
      android:background="@color/secondaryColor"
      android:textColor="@color/secondaryTextColor"
      android:src="@drawable/ic_add_black_24dp"
      android:tint="@color/secondaryTextColor"
      android:elevation="@dimen/fab_elevation"
      android:stateListAnimator="@animator/fab_state_list"
      android:clickable="true"
      android:focusable="true"
      android:contentDescription="@string/create_new_calendar_hint"
      />


</android.support.design.widget.CoordinatorLayout>